# django-comment-system

./: LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg
.github/workflows/: pypi-publish.yml
comment/: __init__.py  admin.py  forms.py  managers.py  mixins.py  models.py  settings.py  urls.py  utils.py  views.py
comment/locale/fa/LC_MESSAGES/: django.mo  django.po
comment/migrations/: 0001_initial.py  0002_config.py  0003_comment_content_main_comment_status_edited_and_more.py
comment/static/comment/css/: comment.css  comment.min.css  style.css  style.min.css
comment/static/comment/js/: comment-no-jquery-no-tested.js  comment.js  comment.min.js
comment/static/css/: style.css  style.min.css
comment/static/js/: comment.js  comment.min.js
comment/static/tailwindcss/: style.css  tailwind.config.js
comment/templates/: IMPORTS.html
comment/templates/comment/: comment.html  comment_body.html  comment_child.html  comment_counter.html  comment_delete.html  comment_form.html  comment_list.html  comment_parent.html  comment_reactions.html  comments.html  comments_list.html  object_info.html
comment/templates/comment/comment/: comment_body.html  comment_counter.html  comment_list.html  comments.html  object_info.html
comment/templates/comment/forms/: comment_form_create.html  comment_form_edit.html  comment_form_reply.html
comment/templates/comment/icons/: icon_arrow_backward.html  icon_arrow_forward.html  icon_delete.html  icon_dots.html  icon_down.html  icon_edit.html  icon_eye.html  icon_eye_off.html  icon_pen.html  icon_pin.html  icon_up.html
comment/templates/comment/utils/: IMPORTS.html  SCRIPTS.html  comment_list_loader.html  comment_list_pagination.html  toast.html
comment/templates/forms/: comment_form_create.html  comment_form_delete.html  comment_form_edit.html  comment_form_reply.html
comment/templates/utils/: IMPORTS.html  SCRIPTS.html  comment_list_empty.html  comment_list_loader.html  comment_list_pagination.html
comment/templatetags/: comment_tags.py
