[metadata]
name = django-tailwind-comments
version = file: VERSION
author = Mahyar
author_email = mmaahhyyaarr@gmail.com
description = Django Comment app. It can be associated with any given model.
url = https://github.com/lordmahyar/django-tailwind-comments
project_urls =
    Documentation=https://github.com/lordmahyar/django-tailwind-comments/README.md
    Source Code=https://github.com/lordmahyar/django-tailwind-comments
license = MIT
keywords = django comment comments ajax

[options]
packages = find:
include_package_data = True
install_requires = django
zip_safe = False

[options.extras_require]
markdown = markdown

[flake8]
exclude = .git,*migrations*,test
