[metadata]
name = django-tailwind-comments
version = file: VERSION
author = Mahyar
author_email = mmaahhyyaarr@gmail.com
description = Django Comment app. It can be associated with any given model.
long_description = file: README.rst
long_description_content_type= text/x-rst
url = https://github.com/lordmahyar/django-tailwind-comments
project_urls =
    Documentation=https://github.com/lordmahyar/django-tailwind-comments/README.md
    Source Code=https://github.com/lordmahyar/django-tailwind-comments
license = MIT
keywords = django comment comments ajax

[options]
packages = find:
include_package_data = True
install_requires = django
zip_safe = False

[options.extras_require]
markdown = markdown

[options.package_data]
mypkg =
    comment/*
