[metadata]
name = django-comment-system
version = file: VERSION
author = Mahyar Amiri
author_email = mmaahhyyaarr@gmail.com
description = Django Comment System, It can be associated with any given model.
long_description = file: README.rst
long_description_content_type= text/x-rst
url = https://github.com/mahyar-amiri/django-comment-system
project_urls =
    Documentation=https://github.com/mahyar-amiri/django-comment-system/README.md
    Source Code=https://github.com/mahyar-amiri/django-comment-system
license = MIT
keywords = django comment comment-system django-comment comments comments-system django-comments tailwind tailwindcss ajax

[options]
packages = find:
include_package_data = True
install_requires =
    django
    pillow
zip_safe = False

[options.extras_require]
markdown = markdown

[options.package_data]
mypkg =
    comment/*
